--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,12 @@ release_tests = 1
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
 github_user   = PerlFFI
-workflow      = linux
+
+workflow = linux
+workflow = macos
+workflow = windows
+workflow = cygwin
+workflow = msys2-mingw
 
 [RemovePrereqs]
 remove = strict
